--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jiwoo-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zoowb.github.io/jiwoo-portfolio",
+  "homepage": "https://zoowb.github.io/jiwoo-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
